# yomikiri

./: .gitignore  .prettierignore  ARCHITECTURE.md  Anki_Template.md  CLAUDE.md  Cargo.toml  LICENSE  Privacy.md  README.md  Taskfile.dist.yml  Taskfile.yml  dprint.json  eslint.config.js  generated.schema.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tsconfig.json
.github/workflows/: ci.yml  download_jmdict.yml  release.yml
.roo/rules/: 01-rules.md
android/: .editorconfig  CLAUDE.md  Taskfile.yml  build.gradle.kts  settings.gradle.kts
android/app/: .gitignore  build.gradle.kts
android/gradle/: libs.versions.toml
anki_rs/: .gitignore  Cargo.toml  build.rs  build.sh
anki_rs/src/: lib.rs  schema.sql  uniffi_anki.udl
crates/dictionary/: build.rs  package.json
crates/japanese-utils/: Cargo.toml  Taskfile.yml  package.json
crates/jmdict/: Cargo.toml  README.md  package.json
crates/jmdict/src/: error.rs  jmdict.rs  lib.rs  utils.rs  xml.rs
crates/jmdict/src/jmdict/: mod.rs  parse.rs  types.rs
crates/jmdict/src/jmdict/snapshots/: yomikiri_jmdict__jmdict__parse__tests__parse_dialect.snap  yomikiri_jmdict__jmdict__parse__tests__xml_parse.snap  yomikiri_jmdict__jmdict__parse__tests__xml_parse2.snap
crates/jmdict/src/jmnedict/: mod.rs  parse.rs  types.rs
crates/jmdict/src/jmnedict/snapshots/: yomikiri_jmdict__jmnedict__parse__tests__parse_jmnedict.snap  yomikiri_jmdict__jmnedict__parse__tests__parse_jmnedict.snap.new
crates/jmdict/tests/it/: jmdict.rs  jmnedict.rs  main.rs
crates/jmdict/tests/it/snapshots/: it__jmdict__parse_dialect.snap  it__jmdict__parse_jmdict.snap  it__jmdict__parse_jmdict_2.snap  it__jmdict__xml_parse.snap  it__jmdict__xml_parse2.snap  it__jmnedict__parse_jmnedict.snap
crates/unidic/: Cargo.toml  README.md  Taskfile.yml  package.json
crates/unidic-types/: Cargo.toml  package.json
crates/unidic/src/: main.rs  transform.rs
crates/yomikiri-backend/: .gitignore  Cargo.toml  README.md  Taskfile.yml  build.rs  chunk_wasm.rs  package.json  scripts.js  uniffi-bindgen.rs
crates/yomikiri-backend-uniffi/: .gitignore  Cargo.toml  Taskfile.yml  uniffi-bindgen.rs  uniffi.toml
crates/yomikiri-backend-uniffi/schemars/: uniffi-bindings-package.json  uniffi-schemars.rs
crates/yomikiri-backend-uniffi/src/: error.rs  invoke.rs  lib.rs  run.rs
crates/yomikiri-backend-uniffi/src/db/: db_migrate.rs  migrate.rs  mod.rs  storage.rs  store.rs
crates/yomikiri-backend-uniffi/src/db/sql/: 0_to_1.sql  db_migrate_from_0_to_1.sql
crates/yomikiri-backend-wasm/: Cargo.toml  Taskfile.yml
crates/yomikiri-backend-wasm/src/: error.rs  lib.rs
crates/yomikiri-backend/bindings/: package.json
crates/yomikiri-backend/src/: dictionary.rs  error.rs  ffi.rs  grammar.rs  invoke.rs  lib.rs  run.rs  search.rs  tokenize.rs  unidic.rs  uniffi_yomikiri.udl  utils.rs  wasm.rs
crates/yomikiri-backend/src/ffi/: backend.rs  error.rs  mod.rs  update_dict.rs
crates/yomikiri-backend/tests/it/: common.rs  grammar.rs  tokenize.rs
crates/yomikiri-dictionary/: .gitignore  Cargo.toml  Taskfile.yml  package.json
crates/yomikiri-dictionary-generator/: .gitignore  Cargo.toml  Taskfile.yml  package.json
crates/yomikiri-dictionary-generator/files/: package.json
crates/yomikiri-dictionary-generator/src/: main.rs
crates/yomikiri-dictionary/src/: dictionary.rs  entry.rs  error.rs  file.rs  index.rs  jagged_array.rs  jmdict.rs  jmnedict.rs  lib.rs  meaning.rs  metadata.rs  name.rs  utils.rs
crates/yomikiri-dictionary/tests/it/: common.rs  dictionary.rs  main.rs  meaning.rs  parse.rs  term.rs
crates/yomikiri-dictionary/tests/it/snapshots/: it__parse__jmdict_parse_1.snap  it__parse__jmdict_parse_2.snap  it__parse__jmnedict_parse_multiple.snap  it__parse__jmnedict_parse_single.snap  it__parse__skip_name_entries_in_jmdict.snap
crates/yomikiri-generate-dictionary/: Cargo.toml  package.json
dictionary/: .gitignore  Cargo.toml  README.md  package.json
dictionary-types/: Cargo.toml
dictionary-types/src/: lib.rs
dictionary/res/: dictionary-metadata.json
dictionary/src/: entry.rs  error.rs  file.rs  jmdict.rs  lib.rs  main.rs  wasm.rs  xml.rs
extension/: README.md  esbuild.config.mjs  esbuild.config.ts  jest.config.js  package.json  tsconfig.json
extension/scripts/: jestEnvironment.js  jestFileTransformer.js  jestSetup.js
extension/src/: anki.ts  ankiNoteBuilder.test.ts  ankiNoteBuilder.ts  api.ts  backend.ts  browserApi.ts  config.ts  (+18 more)
extra/generate-license/rust/: Cargo.toml
extra/generate-license/rust/src/: main.rs
extra/tokenizers/: Cargo.toml  README.md
extra/tokenizers/src/: lib.rs  lindera.rs  main.rs  types.rs  vaporetto.rs
jmdict/: Cargo.toml  README.md  package.json
jmdict/src/: error.rs  jmdict.rs  lib.rs  main.rs  xml.rs
main/: CLAUDE.md  README.md  Taskfile.dist.yml  Taskfile.yml  esbuild.config.ts  jest.config.js  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
prepare_dict/: Cargo.toml  README.md  minify.js  package.json  prepare_dict.py
prepare_dict/src/: jmdict.rs  main.rs  xml.rs
rust/: .gitignore  Cargo.toml  README.md  build.rs  build.sh  chunk_wasm.rs  gzip_wasm.js  package.json  uniffi-bindgen.rs
rust/src/: anki.rs  ankierror.rs  dictionary.rs  error.rs  ffi.rs  grammar.rs  japanese.rs  lib.rs  search.rs  tokenize.rs  tokenizer.rs  utils.rs  wasm.rs
rust/tests/: tokenize.rs
rust/tests/it/: common.rs  grammar.rs  main.rs  tokenize.rs
safari/: Bridging-Header.h  README.md  Yomikiri Extension (iOS).entitlements
tokenizer/: .gitignore  README.md  esbuild.config.js  gzip_wasm.js  package.json  tsconfig.json
tokenizer/lindera-wasm/: Cargo.toml  README.md  build.rs  uniffi-bindgen.rs
tokenizer/lindera-wasm/src/: lib.rs  uniffi_lindera.udl  utils.rs
tokenizer/lindera-wasm/swift/: uniffi_lindera.swift  uniffi_linderaFFI.h  uniffi_linderaFFI.modulemap
unidic/: .gitignore  Cargo.toml  README.md  build.rs
unidic-types/: Cargo.toml  README.md
unidic/src/: lib.rs  main.rs  transform.rs
unidic/unidic-build/: Cargo.toml
unidic/unidic-build/src/: lib.rs  transform.rs
(+665 files in other folders)
