[workspace]
members = [
  "crates/yomikiri-backend",
  "crates/yomikiri-backend-uniffi",
  "crates/yomikiri-backend-wasm",
  "crates/jmdict",
  "crates/yomikiri-dictionary",
  "crates/unidic",
  "crates/unidic-types",
  "extra/generate-license/rust",
  "crates/yomikiri-dictionary-generator",
  "crates/japanese-utils",
]
resolver = "2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"

[workspace.lints.clippy]
needless_borrows_for_generic_args = "allow"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[workspace.dependencies]
lindera-core = { git = "https://github.com/BlueGreenMagick/lindera.git", branch = "yomikiri" }
lindera-dictionary = { git = "https://github.com/BlueGreenMagick/lindera.git", branch = "yomikiri" }
lindera-tokenizer = { git = "https://github.com/BlueGreenMagick/lindera.git", branch = "yomikiri" }
lindera-unidic-builder = { git = "https://github.com/BlueGreenMagick/lindera.git", branch = "yomikiri" }

anyhow = "1"
byteorder = "1"
chrono = { version = "0.4", features = ["alloc"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.2"
flate2 = "1"
fst = "0.4"
itertools = "0.11"
log = "0.4"
ouroboros = "0.18"
tempfile = "3.8"
thiserror = "1"
regex = "1"
rustyxml = { version = "0.3.0", git = "https://github.com/Florob/RustyXML.git", package = "RustyXML" }
unicode-normalization = "0.1"
unicode-segmentation = "1.9"
uniffi = { version = "0.29.0" }
ureq = "2"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
zip = "2.2"
fs-err = "2.11"
lazy_static = "1.5"
tsify-next = { version = "0.5", features = ["js"], default-features = false }
wasm-bindgen = "0.2"
quick-xml = "0.37"
insta = { version = "1.39", features = ["yaml"] }
fern = "0.6"
polonius-the-crab = "0.4.1"
lazy-regex = "3.3"
postcard = { version = "1.0", features = ["use-std"] }
memchr = "2"
memmap2 = "0.9"
schemars = "1.0.0-alpha.17"

japanese-utils = { path = "./crates/japanese-utils" }
yomikiri-dictionary = { path = "./crates/yomikiri-dictionary" }
yomikiri-jmdict = { path = "./crates/jmdict" }
yomikiri-unidic-types = { path = "./crates/unidic-types" }
yomikiri-rs = { path = "./crates/yomikiri-backend" }
