[workspace]
members = [
  "crates/japanese-utils",
  "crates/jmdict",
  "crates/unidic",
  "crates/unidic-types",
  "crates/yomikiri-backend",
  "crates/yomikiri-backend-uniffi",
  "crates/yomikiri-backend-wasm",
  "crates/yomikiri-dictionary",
  "crates/yomikiri-dictionary-generator",
  "extra/generate-license/rust",
]
resolver = "2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"

[workspace.lints.clippy]
needless_borrows_for_generic_args = "allow"
# Used to signal that the crate is used in the file
# e.g. `use serde_json`
single_component_path_imports = "allow"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[workspace.dependencies]
lindera-core = { git = "https://github.com/BlueGreenMagick/lindera.git", branch = "yomikiri" }
lindera-tokenizer = { git = "https://github.com/BlueGreenMagick/lindera.git", branch = "yomikiri" }
lindera-unidic-builder = { git = "https://github.com/BlueGreenMagick/lindera.git", branch = "yomikiri" }

anyhow = "1"
byteorder = "1"
chrono = { version = "0.4", features = ["alloc"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.2"
fern = "0.6"
flate2 = "1"
fs-err = "2.11"
fst = "0.4"
insta = { version = "1.39", features = ["yaml"] }
itertools = "0.11"
lazy-regex = "3.3"
log = "0.4"
memchr = "2"
memmap2 = "0.9"
ouroboros = "0.18"
polonius-the-crab = "0.4.1"
postcard = { version = "1.0", features = ["use-std"] }
quick-xml = "0.37"
schemars = "1.0.0-alpha.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tempfile = "3.8"
thiserror = "1"
tsify-next = { version = "0.5", features = ["js"], default-features = false }
unicode-normalization = "0.1"
unicode-segmentation = "1.9"
uniffi = { version = "0.29.0" }
ureq = "2"
wasm-bindgen = "0.2"
zip = "2.2"

japanese-utils = { path = "./crates/japanese-utils" }
yomikiri-dictionary = { path = "./crates/yomikiri-dictionary" }
yomikiri-jmdict = { path = "./crates/jmdict" }
yomikiri-rs = { path = "./crates/yomikiri-backend" }
yomikiri-unidic-types = { path = "./crates/unidic-types" }
