[package]
name = "anki_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi-bindgen"]

[features]
uniffi-bindgen = ["uniffi/cli"]

[dependencies]
# reqwest/native-tls support iOS as well as macOS
anki = { git = "https://github.com/blueGreenMagick/anki", branch = "yomikiri", features = ["native-tls"] }
rusqlite = { version = "0.29.0", features = ["trace", "functions", "collation", "bundled"] }
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
snafu =  { version = "0.7" }
futures = { version = "0.3" }
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = { version = "0.11" }
log = { version = "0.4" }
oslog = { version = "0.2" }
uniffi = { git = "https://github.com/BlueGreenMagick/uniffi-rs.git", branch = "custom" }

[build-dependencies]
uniffi = { git = "https://github.com/BlueGreenMagick/uniffi-rs.git", branch = "custom", features = [ "build" ]}