[package]
name = "yomikiri-dictionary"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1"
flate2 = "1"
byteorder = "1"
bincode = "1"
