[package]
name = "yomikiri-jmdict"
version = "0.1.0"
edition = "2021"
default-run = "yomikiri-dictionary-builder"
license = "MIT"

[dependencies]
rustyxml = { version = "0.3.0", git = "https://github.com/Florob/RustyXML.git", package = "RustyXML" }
serde = { version = "1.0", features = ["derive"] }
regex = "1"
serde_json = "1"
bincode = "1"
yomikiri-dictionary-types = { path = "../dictionary-types" }
itertools = "0.11"
ureq = { version = "2.7", optional = true }
tempfile = { version = "3.8", optional = true }
flate2 = { version = "1.0", optional = true }

[features]
default = ["bin"]
bin = ["dep:ureq", "dep:tempfile", "dep:flate2"]

[[bin]]
name = "yomikiri-dictionary-builder"
path = "src/main.rs"
required-features = ["bin"]
