[package]
name = "yomikiri-jmdict"
version = "0.1.0"
edition = "2021"
description = "JMDict XML Types"
license = "MIT"

[dependencies]
rustyxml = { version = "0.3.0", git = "https://github.com/Florob/RustyXML.git", package = "RustyXML" }
serde = { version = "1.0", features = ["derive"] }
regex = "1"
serde_json = "1"
bincode = "1"
thiserror = "1"
