
[package]
name = "yomikiri-rs"
version = "0.1.0"
authors = ["BlueGreenMagick <bluegreenmagick@gmail.com>"]
edition = "2021"
description = "Rust library used in Yomikiri"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
# uniffi/cli is always enabled when calling uniffi-bindgen
# but the the lint tool does not know that
# So we set below feature to skip type checking code that uses uniffi/cli
uniffi-bindgen = []

[dependencies]
lindera-tokenizer = { git = "https://github.com/BlueGreenMagick/lindera.git", branch = "yomikiri" }
lindera-dictionary = { git = "https://github.com/BlueGreenMagick/lindera.git", branch = "yomikiri" }
lindera-core = { git = "https://github.com/BlueGreenMagick/lindera.git", branch = "yomikiri" }
yomikiri-dictionary-types = { path = "../dictionary-types" }
unicode-normalization = "0.1.22"
unicode-segmentation = "1.9.0"
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "1.0"

[target.'cfg(target_family="wasm")'.dependencies]
serde-wasm-bindgen = { version = "0.5" }
wasm-bindgen = { version = "0.2.63" }
wasm-logger = { version = "0.2" }
web-sys = { version = "0.3", features = ["Window", "Performance", "console"] }
js-sys = "0.3"
console_error_panic_hook = { version = "0.1.6" }

[target.'cfg(not(target_family="wasm"))'.dependencies]
uniffi = { git = "https://github.com/BlueGreenMagick/uniffi-rs.git", branch = "custom" }

[target.'cfg(any(target_os="macos", target_os="ios"))'.dependencies]
oslog = { version = "0.2" }

[build-dependencies]
cfg_aliases = "0.1.0"

[target.'cfg(not(target_family="wasm"))'.build-dependencies]
uniffi = { git = "https://github.com/BlueGreenMagick/uniffi-rs.git", branch = "custom", features = [
  "build",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
