[package]
name = "yomikiri-unidic-dictionary"
version = "0.1.0"
edition = "2021"

[features]
default = []
real = []


[dependencies]
lindera-core = { git = "https://github.com/BlueGreenMagick/lindera.git" }

[build-dependencies]
yomikiri-unidic-build = { path = "./unidic-build" }
walkdir = "2.3"
filetime = "0.2"
ureq = "2.7"
tempfile = "3.8"
zip = "0.6"
