[package]
name = "yomikiri-unidic-dictionary"
version = "0.1.0"
edition = "2021"

[features]
default = []
real = []


[dependencies]
vibrato = "0.5"

[build-dependencies]
yomikiri-unidic-build = { path = "./unidic-build" }
vibrato = "0.5"
walkdir = "2.3"
filetime = "0.2"
ureq = "2.7"
tempfile = "3.8"
zip = "0.6"
