[package]
name = "yomikiri-unidic-dictionary"
description = "Customize unidic tokenizer dictionary for Yomikiri"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
lindera-unidic-builder = { git = "https://github.com/BlueGreenMagick/lindera.git", branch = "yomikiri" }
lindera-core = { git = "https://github.com/BlueGreenMagick/lindera.git", branch = "yomikiri" }
yomikiri-dictionary = { path = "../dictionary", default-features = false }
yomikiri-dictionary-types = { path = "../dictionary-types" }
yomikiri-unidic-types = { path = "../unidic-types" }
csv = "1.2"
walkdir = "2.3"
filetime = "0.2"
ureq = "2.7"
tempfile = "3.8"
zip = "0.6"
