[package]
name = "yomikiri-jmdict"
version = "0.1.0"
edition = "2021"
description = "JMDict XML Types"
license = "MIT"

[features]
wasm = ["dep:tsify-next", "dep:wasm-bindgen"]

[dependencies]
thiserror = { workspace = true }
lazy_static = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
polonius-the-crab = { workspace = true }
lazy-regex = { workspace = true }

tsify-next = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
