[package]
name = "yomikiri-jmdict"
version = "0.1.0"
edition = "2021"
description = "JMDict XML Types"
license = "MIT"


[dependencies]
thiserror = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
polonius-the-crab = { workspace = true }
lazy-regex = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
