[package]
name = "yomikiri-jmdict"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "JMDict XML Types"

[dependencies]
lazy-regex = { workspace = true }
log = { workspace = true }
polonius-the-crab = { workspace = true }
quick-xml = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
