[package]
name = "yomikiri-unidic-dictionary"
description = "Customize unidic tokenizer dictionary for Yomikiri"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
lindera-unidic-builder = { workspace = true }
lindera-core = { workspace = true }
yomikiri-jmdict = { workspace = true, default-features = false }
yomikiri-dictionary = { workspace = true }
yomikiri-unidic-types = { workspace = true }
csv = { workspace = true }
walkdir = { workspace = true }
filetime = { workspace = true }
ureq = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
