[package]
name = "yomikiri-unidic"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Customize unidic tokenizer dictionary for Yomikiri"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
fs-err = { workspace = true }
lindera-core = { workspace = true }
lindera-unidic-builder = { workspace = true }
tempfile = { workspace = true }
ureq = { workspace = true }
yomikiri-dictionary = { workspace = true }
yomikiri-unidic-types = { workspace = true }
zip = { workspace = true }

[lints]
workspace = true
