[package]
name = "yomikiri-backend-uniffi"
version = "0.1.0"
authors = ["BlueGreenMagick <bluegreenmagick@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Yomikiri Backend with uniffi bindings"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
# uniffi/cli is always enabled when calling uniffi-bindgen
# but the the lint tool does not know that
# So we set below feature to skip type checking code that uses uniffi/cli
uniffi-bindgen = []

[dependencies]
anyhow = { workspace = true }
flate2 = { workspace = true }
fs-err = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
paste.workspace = true
rusqlite.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
uniffi = { workspace = true }
ureq = { workspace = true }
yomikiri-dictionary = { workspace = true }
yomikiri-rs = { workspace = true }

[target.'cfg(any(target_os="macos", target_os="ios"))'.dependencies]
oslog = { version = "0.2" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
