[package]
name = "yomikiri-backend-wasm"
version = "0.1.0"
authors = ["BlueGreenMagick <bluegreenmagick@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Yomikiri Backend with wasm bindings"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
console_error_panic_hook = { version = "0.1" }
flate2 = { workspace = true }
js-sys = { version = "0.3" }
log = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { version = "0.6" }
tsify-next = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-logger = { version = "0.2" }
yomikiri-dictionary = { workspace = true }
yomikiri-rs = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
