
[package]
name = "yomikiri-rs"
version = "0.1.0"
authors = ["BlueGreenMagick <bluegreenmagick@gmail.com>"]
edition = "2021"
description = "Rust library used in Yomikiri"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "schemars"
path = "bin/schemars.rs"


[features]
default = ["wasm"]
wasm = [
  "yomikiri-dictionary/wasm",
  "serde-wasm-bindgen",
  "wasm-bindgen",
  "wasm-logger",
  "web-sys",
  "js-sys",
  "console_error_panic_hook",
  "tsify-next",
]


[dependencies]
lindera-tokenizer = { workspace = true }
lindera-dictionary = { workspace = true }
lindera-core = { workspace = true }
yomikiri-dictionary = { workspace = true }
yomikiri-unidic-types = { workspace = true }
unicode-normalization = { workspace = true }
unicode-segmentation = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
fst = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
japanese-utils = { workspace = true }
schemars = { workspace = true }

# feature="wasm" dependencies
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-logger = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = [
  "Window",
  "Performance",
  "console",
], optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
tsify-next = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
insta = { workspace = true }
memmap2 = { workspace = true }
fs-err = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow" }

[lints.clippy]
needless_borrows_for_generic_args = "allow"
