
[package]
name = "yomikiri-rs"
version = "0.1.0"
authors = ["BlueGreenMagick <bluegreenmagick@gmail.com>"]
edition = "2021"
description = "Rust library used in Yomikiri"
license = "MIT"


[[bin]]
name = "schemars"
path = "bin/schemars.rs"

[dependencies]
lindera-tokenizer = { workspace = true }
lindera-dictionary = { workspace = true }
lindera-core = { workspace = true }
yomikiri-dictionary = { workspace = true }
yomikiri-unidic-types = { workspace = true }
unicode-normalization = { workspace = true }
unicode-segmentation = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
fst = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
japanese-utils = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
insta = { workspace = true }
memmap2 = { workspace = true }
fs-err = { workspace = true }

[lints.clippy]
needless_borrows_for_generic_args = "allow"
