[package]
name = "yomikiri-dictionary-generator"
version = "0.1.0"
edition = "2021"
description = "Generate or download yomikiri dictionary files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
ureq = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
yomikiri-dictionary = { workspace = true }
fs-err = { workspace = true }
log = { workspace = true }
fern = { workspace = true }

[lints]
workspace = true
