[package]
name = "yomikiri-dictionary-generator"
version = "0.1.0"
edition = "2021"
description = "Generate or download yomikiri dictionary files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
fern = { workspace = true }
flate2 = { workspace = true }
fs-err = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }
ureq = { workspace = true }
yomikiri-dictionary = { workspace = true }

[lints]
workspace = true
