[package]
name = "yomikiri-dictionary"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasm = ["dep:wasm-bindgen", "yomikiri-jmdict/wasm"]
uniffi = ["dep:uniffi"]

[dependencies]
yomikiri-jmdict = { workspace = true }
yomikiri-unidic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
byteorder = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
fst = { workspace = true }
ouroboros = { workspace = true }
chrono = { version = "0.4", features = ["alloc"] }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
tsify-next = { workspace = true }
bincode = "1"
postcard = { workspace = true }
unicode-normalization = { workspace = true }
memchr = { workspace = true }

[target.'cfg(target_family="wasm")'.dependencies.chrono]
version = "0.4"
features = ["wasmbind"]

[dev-dependencies]
insta = { workspace = true }
anyhow = { workspace = true }
fs-err = { workspace = true }

[lints]
workspace = true
