[package]
name = "yomikiri-dictionary"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { workspace = true }
chrono = { workspace = true, features = ["wasmbind"] }
fst = { workspace = true }
itertools = { workspace = true }
memchr = { workspace = true }
ouroboros = { workspace = true }
postcard = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
unicode-normalization = { workspace = true }
yomikiri-jmdict = { workspace = true }
yomikiri-unidic-types = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
fs-err = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
