
[package]
name = "lindera-wasm"
version = "0.1.0"
authors = ["BlueGreenMagick <bluegreenmagick@gmail.com>"]
edition = "2021"
description = "A lidera japanese tokenizer wrapper for javascript and typescript"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"


[dependencies]
lindera = { version = "0.23.1", features = ["ipadic"]}
log = { version = "0.4" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[target.'cfg(target_family="wasm")'.dependencies]
serde = { version = "1.0", features = ["derive"]}
serde-wasm-bindgen = { version="0.5"}
wasm-bindgen = { version="0.2.63"}
wasm-logger = { version = "0.2"}
web-sys = { version="0.3", features=["Window", "Performance", "console"]}

[target.'cfg(not(target_family="wasm"))'.dependencies]
uniffi = { git = "https://github.com/BlueGreenMagick/uniffi-rs.git", branch = "custom"}

[target.'cfg(any(target_os="macos", target_os="ios"))'.dependencies]
oslog = { version = "0.2"}

[build-dependencies]
cfg_aliases = "0.1.0"

[target.'cfg(not(target_family="wasm"))'.build-dependencies]
uniffi = { git = "https://github.com/BlueGreenMagick/uniffi-rs.git", branch = "custom", features = [ "build" ]}


[dev-dependencies]
wasm-bindgen-test = "0.3.13"